# python-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yaml
tests/: version_test.py
