[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Template for a Python project"
authors = ["IdoKendo <ryuusuke@gmail.com>"]
readme = "README.md"
packages = [{include = "python_template", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3"
mypy = "^1.3"
pre-commit = "^3.3"
pytest = "^7.3"
pytest-cov = "^4.0"
ruff = "^0.0.269"
scriv = { extras = ["toml"], version = "^1.3" }
tox =  "^4.5"

[tool.pytest.ini_options]
addopts = "--cov=python_template --cov-report html --cov-report xml"
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py38"
select = [
    "A",    #  builtins
    "ARG",  #  unsued arguments
    "B",    #  bugbear
    "C4",   #  comprehensions
    "C90",  #  mccabe
    "COM",  #  commas
    "E",    #  pycodestyle
    "F",    #  pyflakes
    "I",    #  isort
    "N",    #  pep8-naming
    "PT",   #  pytest style
    "RUF",  #  ruff
    "SIM",  #  simplify
    "TID",  #  tidy imports
    "UP",   #  pyupgrade
    "W",    #  warnings
]

[tool.ruff.mccabe]
max-complexity = 8

[tool.ruff.isort]
force-single-line = true

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
